@@ -2,29 +2,35 @@ package com.example.jwtsecurity.security;
 
 import com.example.jwtsecurity.model.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 public class CustomUserDetails implements UserDetails {
 
     private final String username;
     private final String password;
+    private final User user;
+
     private final Collection<? extends GrantedAuthority> authorities;
 
     public CustomUserDetails(User user) {
-        //3user modelinden aldığımız verileri UserDetails sözleşmesine uyarlama
+        this.user = user;
         this.username = user.getUsername();
         this.password = user.getPassword();
-        //yetki (role) tanımlamadık boş liste döndür
-        this.authorities = Collections.emptyList();
+        this.authorities = List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()));
     }
+
+
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return authorities;
     }
+
 
     @Override
     public String getPassword() {
